--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -34,8 +34,8 @@ body {
     border-radius: 5px;
     display: flex;
     margin: auto;
-    justify-content: center;
-    flex-direction: row;
+    /*justify-content: center;*/
+    /*flex-direction: row;*/
     /* TODO: Add an automatic margin and a flex container to this selector */
 }
 
@@ -48,7 +48,7 @@ body {
     border-radius: 0;
     outline: 0;
     -webkit-appearance: none;
-    display: flex;
+    /*display: flex;*/
 }
 
 .btn-primary {
@@ -59,12 +59,12 @@ body {
 }
 
 .destination {
-
+    flex-basis: 15em    ;
     /* TODO:
         Add an explicit size for items along the main axis of 15em.
         Read more about Flex Basis: https://java.codeup.com/appendix/further-reading/html-css/flexbox-additional-concepts/#flex-basis */
 }
-form {
-    display: flex;
-    justify-content: center;
-}
+/*form {*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*}*/
