--- a/css/weather_map.css
+++ b/css/weather_map.css
@@ -15,6 +15,8 @@ body {
 .list-group-item {
     background-color: var(--secondary-color);
 }
+.btn {
+}
 
 #search-box {
     background-color: var(--secondary-color);
@@ -22,7 +24,9 @@ body {
 
 .btn-primary {
     background-color: var(--accent-color);
-    color: var(--dark-accent)
+    color: var(--dark-accent);
+    outline-color: var(--accent-color);
+
 
 }
 
